<resources>
    <string name="app_name">MinorProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Helpline Numbers</string>
    <string name="menu_gallery">Self-Defence Techniques</string>
    <string name="menu_slideshow">Add Contacts</string>
    <string name="show_contacts">Show Contacts</string>
    <string name="heading_self_defence">7 Self-Defense Techniques for Women Recommended by a Professional</string>
    <string name="first_point_self_defence"> 1. For starters, memorize the vulnerable places.</string>
    <string name="second_point_self_defence"> 2. The simplest and most effective moves:</string>
    <string name="third_point_self_defence">3. If you were grabbed from the front:</string>
    <string name="fourth_point_self_defence">4. How to free your hands:</string>
    <string name="fifth_point_self_defence">5. If you were grabbed from behind:</string>
    <string name="sixth_point_self_defence">6. If you were approached and grabbed from the side:</string>
    <string name="seventh_point_self_defence">7. If you were pushed against the wall:</string>
    <string name="first_sub_heading">It does not  matter how big or heavy your attacker is because you can beat anyone if you know where the most vulnerable spots are. The main ones are the eyes, nose, throat, chest, knees, and groin.</string>
    <string name="second_sub_heading">One of the best moves that will make any giant whimper or drop to his knees is grabbing the wrist. Grab his little finger and his ring finger with one hand, and his middle and index finger with the other and bend the wrist forward.
        If you can\'t grab your opponent\'s hand, hit him with a fist or with a finger between the collarbones or into his Adam\'s apple. This will allow you to disorient your opponent enough that it will take him a long time to come back to his senses.</string>
    <string name="second_sub_heading_2">The most obvious area for an attack is the groin. All self-defense courses advise aiming for this area.
        Hitting this area will literally paralyze the attacker and you will have just enough time to escape.</string>
    <string name="third_sub_heading">If you were grabbed from the front and you can\'t lift your hands, do the following: move your hands forward and make a fist in front of your pelvis. This will create enough room between you and the attacker.
        After that, hit the attacker\'s nose with your forehead. This will make the attacker move away from you. Now hit him in the groin with your knee.</string>
    <string name="third_sub_heading_2">If there is still some room between you and the attacker, there is a way you can protect yourself using your palm. Straighten your left arm and hit the attacker on his chin and nose with your right arm. Then, hit him in the groin. This way the attacker will be disoriented for a long time and he won\'t be able to move.</string>
    <string name="fourth_sub_heading">You can easily escape a stronghold if you remember the \"rule of thumb\": rotate your arm to the side of the attacker\'s thumb.
        If he is holding your arm tightly, rotate your wrist toward the thumb. When your arm is under the attacker\'s, pull your arm as strongly as you can.</string>
    <string name="fifth_sub_heading">Attackers often come from the back because this is the easiest way to hold the victim\'s arms so that they can\'t move them.</string>
    <string name="fifth_sub_heading_2">To set yourself free, quickly bend back and try to hit the attacker with the back of your head. It\'s OK if you can\'t do it: the point is to make the attacker put one of his legs forward.
        Now quickly bend down, grab his leg and get up pulling it with you. Now the attacker will lose balance and you will be able to drop even the biggest opponent.</string>
    <string name="sixth_sub_heading">An elbow hit is one of the most dangerous hits in all kinds of martial arts. This is exactly the hit you need if you are approached from the side.</string>
    <string name="sixth_sub_heading_2">Hit the attacker\'s temple, jaw, or nose with an arched move. After this, the attacker will take a few steps back. Now hit him in his belly or chest. Elbow hits are so strong that they will disorient any opponent.</string>
    <string name="seventh_sub_heading">It happens very often that attackers try to corner their victims or push them against a wall. In this situation, it\'s necessary to remember the most vulnerable places and hit one of them depending on your position.</string>
    <string name="seventh_sub_heading_2">If both of the attacker\'s arms are up, then straighten your palm and hit him in the armpit.If one of your arms is down, there is a chance you can hit the opponent in his chest, neck, or jaw.But one of the most effective and powerful hits is a hit with your head. Squat a little to be lower than the opponent. Then quickly jump up and hit him in the jaw with your forehead. This move will instantly disorient the attacker and give you a chance to escape.</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="add_your_loved_ones_numbers_here_to_share_your_location_with_them">Add Your LovedOnes Numbers Here To Share Your Location With Them</string>
    <string name="pick_contact">Pick Contact From Contacts-List</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
</resources>